<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpspace_title" translatable="false">DerpSpace</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="icons_category">Icons</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="listview">ListView</string>
    <string name="light_category">Lights</string>
    <string name="udfps_category">Fingerprint On Display</string>
    <string name="general_tweaks_title">General settings</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="general_category">General</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="misc_derpspace_title">Miscellaneous</string>
    <string name="navigationbar_settings_title">Navigation Bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="footer_category">Footer</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="customisation_title">Customisation</string>
    <string name="battery_title">Battery</string>
    <string name="battery_category">Battery light</string>
    <string name="derpspace_dialog_title">Help us help you!</string>
    <string name="derpspace_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="derpspace_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="qs_tile_vibration_title">Vibration</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="quick_settings_vibrate_duration_title">Vibration duration</string>
    <string name="quick_settings_vibrate_duration_summary">How many milliseconds to vibrate</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="volte_icon_miui">MIUI 11 Icon</string>
    <string name="volte_icon_emui">EMUI Icon</string>
    <string name="volte_icon_margaritov">HD Filled Icon</string>
    <string name="volte_icon_margaritov2">Margaritov VoLTE Icon</string>
    <string name="volte_icon_vivo">Vivo Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="vowifi_icon_simple1">Simple1 Icon</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Customise heads up notifications settings</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="traffic_title">Traffic Indicators</string>
    <string name="network_traffic">Network traffic</string>
    <string name="statusbar_show_network_traffic_title">Show network traffic in statusbar</string>
    <string name="statusbar_network_traffic_threshold_tx_title">Auto hide threshold for upload</string>
    <string name="statusbar_network_traffic_threshold_rx_title">Auto hide threshold for download</string>
    <string name="statusbar_network_traffic_unit_text_size_title">Network traffic unit text size</string>
    <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="show_lockscreen_media_art_title">Show media art</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="screen_off_fod_title">Screen off FOD</string>
    <string name="screen_off_fod_summary">Keep FOD enabled when the screen is off</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="flashlight_on_call_title">Blink Flashlight for incoming call</string>
    <string name="flashlight_on_call_ignore_dnd_title">Ignore DND</string>
    <string name="flashlight_on_call_ignore_dnd_summary">Whether to flash when in Do Not Disturb mode</string>
    <string name="flashlight_on_call_rate_title">Rate</string>
    <string name="flashlight_on_call_rate_summary">Flashlight on call blink rate</string>
    <string name="always_on_display_schedule_title">Always on display schedule</string>
    <string name="pulse_ambient_light_title">Ambient edge lightning</string>
    <string name="pulse_ambient_light_summary">Light ambient edges for pulsing notifications</string>
    <string name="status_bar_notif_count_title">Notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="disable_fingerprint_ripple_effect_title">Disable ripple effect</string>
    <string name="disable_fingerprint_ripple_effect_summary">Disable ripple effect on unlock</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="vibrate_on_notifications_title">Notification vibration</string>
    <string name="vibrate_on_notifications_summary">Vibrate on notifications</string>
    <string name="reticker_category" translatable="false">reTicker</string>
    <string name="reticker_title">reTicker</string>
    <string name="reticker_summary">Replace your notifications with a redesigned version of tickers. \nSlim and less invasive than a standard notification</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
    <string name="force_expanded_notifications_title">Force expand notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
</resources>