<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/notifications_title">

    <!-- Pulse notifications lightning -->
    <com.derp.support.preferences.SystemSettingMasterSwitchPreference
        android:key="pulse_ambient_light"
        android:title="@string/pulse_ambient_light_title"
        android:summary="@string/pulse_ambient_light_summary"
        android:fragment="org.derpfest.derpspace.fragments.EdgeLightningSettings"
        android:persistent="true"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="notifications_general_category"
        android:title="@string/general_category">

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="notification_guts_kill_app_button"
            android:title="@string/notification_guts_kill_app_button_title"
            android:summary="@string/notification_guts_kill_app_button_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="force_expanded_notifications"
            android:title="@string/force_expanded_notifications_title"
            android:summary="@string/force_expanded_notifications_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="statusbar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="notification_sound_vib_screen_on"
            android:title="@string/notification_sound_vib_screen_on_title"
            android:summary="@string/notification_sound_vib_screen_on_summary"
            android:defaultValue="true" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_notifications"
            android:title="@string/vibrate_on_notifications_title"
            android:summary="@string/vibrate_on_notifications_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="headsup_notifications_category"
        android:title="@string/headsup_category">

     <Preference
        android:key="heads_up_notifications"
        android:summary="@string/heads_up_notifications_summary"
        android:title="@string/heads_up_notifications"
        android:fragment="org.derpfest.derpspace.fragments.HeadsUpSettings"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="reticker"
        android:title="@string/reticker_category" >

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="reticker_status"
            android:title="@string/reticker_title"
            android:summary="@string/reticker_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:dependency="reticker_status"
            android:key="reticker_landscape_only"
            android:title="@string/reticker_landscape_only_title"
            android:summary="@string/reticker_landscape_only_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:dependency="reticker_status"
            android:key="reticker_colored"
            android:title="@string/reticker_colored_title"
            android:summary="@string/reticker_colored_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/flashlight_category">

        <com.derp.support.preferences.SystemSettingListPreference
            android:key="flashlight_on_call"
            android:title="@string/flashlight_on_call_title"
            android:entries="@array/flashlight_on_call_entries"
            android:entryValues="@array/flashlight_on_call_values"
            android:defaultValue="0" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="flashlight_on_call_ignore_dnd"
            android:title="@string/flashlight_on_call_ignore_dnd_title"
            android:summary="@string/flashlight_on_call_ignore_dnd_summary"
            android:defaultValue="false" />

        <com.derp.support.preferences.CustomSeekBarPreference
            android:key="flashlight_on_call_rate"
            android:title="@string/flashlight_on_call_rate_title"
            android:summary="@string/flashlight_on_call_rate_summary"
            android:max="5"
            settings:min="1"
            settings:defaultValue="1"
            settings:units="Hz" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <com.derp.support.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
