<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    android:title="@string/network_traffic"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

     <com.derp.support.preferences.SystemSettingSwitchPreference
         android:key="network_traffic_enabled"
         android:title="@string/statusbar_show_network_traffic_title"
         android:defaultValue="0" />

     <com.derp.support.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_auto_hide_threshold_tx"
         android:title="@string/statusbar_network_traffic_threshold_tx_title"
         android:dependency="network_traffic_enabled"
         android:defaultValue="0"
         android:max="1024"
         settings:min="0"
         settings:interval="128" />

     <com.derp.support.preferences.SystemSettingSeekBarPreference
          android:key="network_traffic_auto_hide_threshold_rx"
          android:title="@string/statusbar_network_traffic_threshold_rx_title"
          android:dependency="network_traffic_enabled"
          android:defaultValue="0"
          android:max="1024"
          settings:min="0"
          settings:interval="128" />

     <com.derp.support.preferences.SystemSettingSeekBarPreference
          android:key="network_traffic_unit_text_size"
          android:title="@string/statusbar_network_traffic_unit_text_size_title"
          android:dependency="network_traffic_enabled"
          android:defaultValue="21"
          android:max="25"
          settings:min="15" />

     <com.derp.support.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_rate_text_scale_factor"
         android:title="@string/statusbar_network_traffic_rate_text_scale_factor_title"
         android:dependency="network_traffic_enabled"
         android:defaultValue="15"
         android:max="20"
         settings:min="10" />
</PreferenceScreen>
