<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.derp.support.preferences.CardviewPreference
        android:key="battery_bar_category"
        android:fragment="org.derpfest.derpspace.fragments.BatterySettings"
        android:icon="@drawable/ic_battery_bar"
        android:title="@string/battery_settings_title" />

   <com.derp.support.preferences.CardviewPreference
        android:key="carrier_label"
        android:fragment="org.derpfest.derpspace.fragments.CarrierLabel"
        android:icon="@drawable/ic_carrierlabel"
        android:title="@string/carrier_label_settings_title" />

    <com.derp.support.preferences.CardviewPreference
        android:key="status_bar_clock"
        android:fragment="org.derpfest.derpspace.fragments.ClockDateSettings"
        android:icon="@drawable/ic_status_bar_clock"
        android:title="@string/status_bar_clock_title" />

    <com.derp.support.preferences.CardviewPreference
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category"
        android:icon="@drawable/ic_statusbar_items" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
    </com.derp.support.preferences.CardviewPreference>

    <com.derp.support.preferences.CardviewPreference
        android:key="traffic"
        android:fragment="org.derpfest.derpspace.fragments.Traffic"
        android:icon="@drawable/ic_traffic"
        android:title="@string/traffic_title" />

    <com.derp.support.preferences.CardviewPreference
        android:key="misc_derpspace"
        android:fragment="org.derpfest.derpspace.fragments.MiscDerpSpace"
        android:icon="@drawable/ic_misc_derpspace"
        android:title="@string/misc_derpspace_title" />

</PreferenceScreen>
