<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2020 AOSiP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.derpfest.derpspace.navigation.BubbleNavigationConstraintView
        android:id="@+id/floating_top_bar_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_rect_floating"
        android:padding="16dp"
        app:derpspace_mode="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <org.derpfest.derpspace.navigation.BubbleToggleView
            android:id="@+id/status_bar_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:derpspace_titleColorActive="@color/text_color"
            app:derpspace_colorActive="@color/color_active"
            app:derpspace_colorInactive="@color/color_inactive"
            app:derpspace_icon="@drawable/ic_status_bar_category"
            app:derpspace_shape="@drawable/navigation_transition_background_drawable_status_bar"
            app:derpspace_title="@string/status_bar_category" />

        <org.derpfest.derpspace.navigation.BubbleToggleView
            android:id="@+id/notifications_panel_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:derpspace_titleColorActive="@color/text_color"
            app:derpspace_colorActive="@color/color_active"
            app:derpspace_colorInactive="@color/color_inactive"
            app:derpspace_icon="@drawable/ic_notifications_panel_category"
            app:derpspace_shape="@drawable/navigation_transition_background_drawable_notifications_panel"
            app:derpspace_title="@string/notifications_panel_category" />

        <org.derpfest.derpspace.navigation.BubbleToggleView
            android:id="@+id/lockscreen_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:derpspace_titleColorActive="@color/text_color"
            app:derpspace_colorActive="@color/color_active"
            app:derpspace_colorInactive="@color/color_inactive"
            app:derpspace_icon="@drawable/ic_lockscreen_category"
            app:derpspace_shape="@drawable/navigation_transition_background_drawable_lockscreen"
            app:derpspace_title="@string/lockscreen_category" />

        <org.derpfest.derpspace.navigation.BubbleToggleView
            android:id="@+id/system_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:derpspace_titleColorActive="@color/text_color"
            app:derpspace_colorActive="@color/color_active"
            app:derpspace_colorInactive="@color/color_inactive"
            app:derpspace_icon="@drawable/ic_system_category"
            app:derpspace_shape="@drawable/navigation_transition_background_drawable_system"
            app:derpspace_title="@string/system_category" />

    </org.derpfest.derpspace.navigation.BubbleNavigationConstraintView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/floating_top_bar_navigation"
        android:layout_marginTop="12dp" />

</RelativeLayout>
